<resources>
    <string name="app_name">搞笑斗图大师</string>
    <string name="input">搜索</string>
    <string name="home_doutu">斗图hahaha</string>
    <string name="home_gaoxiao">搞笑</string>
    <string name="home_mengwa">萌娃</string>
    <string name="home_chongwu">宠物</string>
    <string name="home_mingxing">明星</string>
    <string name="home_yingshi">影视</string>
    <string name="home_meishi">美食</string>
    <string name="home_qita">其他</string>
    <string name="discover">发现</string>
    <string name="news">消息</string>
    <string name="news_pic">斗图小助手</string>
    <string name="news_system">系统消息</string>
    <string name="news_feedback">意见反馈</string>
    <string name="news_sys_bind_phone">请立即绑定手机号</string>
    <string name="msg_refresh_success">刷新完毕</string>
    <string name="check_the_network_please">请检查网络设置</string>
    <string name="dtds">斗图大师</string>
    <string name="collection_success">收藏成功</string>
    <string name="collection_failure">收藏失败</string>
    <string name="cancel_collection_success">取消收藏成功</string>
    <string name="pic_isSave">图片已保存到</string>
    <string name="none_pic">暂无改图</string>
    <string name="qq">分享QQ</string>
    <string name="weixin">分享微信</string>
    <string name="gaitu">改图</string>
    <string name="qitabiaoqing">其他表情</string>
    <string name="user_name">昵称</string>
    <string name="support_language">仅支持中英文及数字</string>
    <string name="save">保存</string>
    <string name="log_out">退出登录</string>
    <string name="vip1">确定退出吗</string>
    <string name="kaitong">取消</string>
    <string name="bind_phone">绑定手机</string>
    <string name="immediately_bind">立即绑定</string>
    <string name="common_number">请输入常用手机号</string>
    <string name="input_code">请输入验证码</string>
    <string name="gain_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="please_login">您好，请登录</string>
    <string name="about_product">关于产品</string>
    <string name="versions_detection">版本检</string>
    <string name="data_edit">资料编辑</string>
    <string name="setting">设置</string>
    <string name="update">刷新试试</string>
    <string-array name="discover_title">
        <item>推荐</item>
        <item>全部</item>
    </string-array>
    <string name="determine">确定</string>
    <string name="cancel">取消</string>
    <string name="sign">签到</string>
    <string name="sign_succeed_today">今日签到成功，增加斗气</string>
    <string name="sure">确定</string>
    <string name="have_signed">已签到</string>
    <string name="much_score_int">%1$d 斗气</string>
    <string name="you_have_sign"><Data><![CDATA[<font color="%1$s">您已连续签到 </font><font color="%2$s">%3$d</font> <font color="%1$s">天，累计获得斗气</font>]]></Data></string>
    <string name="feedback">反馈</string>
    <string name="qsrndbgyj">请输入您的宝贵意见</string>
    <string name="lxqq">请留下您的QQ</string>
    <string name="fasong">发送</string>
    <string-array name="month_array">
        <item>一</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>十一月</item>
        <item>十二月</item>
    </string-array>
</resources>