<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_finish"
        android:layout_width="40dp"
        android:layout_height="24.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:scaleType="centerInside"
        android:src="@mipmap/com_bt_ttab_return_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="45dp"
        android:text="@string/bind_phone"
        android:textColor="@color/blank"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/login_iphone"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:background="@null"
            android:digits="1234567890."
            android:hint="@string/common_number" />

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
            android:src="@mipmap/login_bt_delete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="17.5dp"
        android:orientation="horizontal">

        <View
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:background="@color/line"
            android:visibility="gone"></View>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"></View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/login_code"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@null"
            android:digits="1234567890."
            android:hint="@string/input_code" />

        <TextView
            android:id="@+id/login_sendcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="30dp"
            android:text="@string/gain_code"
            android:textColor="@color/blank"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="18dp"
        android:background="@color/line" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/setting_login_btn"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="绑定手机后，你将享受更多的优质服务"
            android:textColor="@color/tv_login_color" />

    </LinearLayout>
</LinearLayout>
