<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:background="@mipmap/home_search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="invisible"
            />
        <LinearLayout
            android:gravity="center_vertical"
            android:background="@drawable/search"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:id="@+id/main_searcher">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_weight="1"></LinearLayout>
            <ImageView

                android:focusable="false"
                android:layout_gravity="center"
                android:background="@mipmap/home_search"
                android:layout_width="25dp"
                android:layout_height="25dp" />
            <EditText
                android:id="@+id/activity_main_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center_vertical"
                android:hint="@string/input"
                android:maxLength="20"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@color/color_text_normal"
                android:textColorHint="@color/color_text_normal"
                android:textSize="@dimen/layout_text_small" />

        </LinearLayout>
        <ImageView
            android:layout_marginRight="19dp"
            android:id="@+id/iv_user_shoucang"
            android:layout_gravity="center_vertical"
            android:background="@mipmap/ic_launcher"
            android:layout_width="30dp"
            android:layout_height="30dp"
             />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"
        android:layout_marginTop="10dp"
        />
    <include layout="@layout/adver_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6.5dp"
                android:textColor="@color/text_color"
                android:text="@string/home_doutu"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/subject_two_examination_secrets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:textColor="@color/text_color"
                android:src="@mipmap/ic_launcher_round" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6.5dp"
                android:text="@string/home_gaoxiao"
                android:textColor="@color/text_color"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/subject_two_qualified_standard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6.5dp"
                android:textColor="@color/text_color"
                android:text="@string/home_mengwa"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/subject_two_before_examination"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6.5dp"
                android:text="@string/home_chongwu"
                android:textColor="@color/text_color"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6.5dp"
                android:textColor="@color/text_color"
                android:text="@string/home_mingxing"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6.5dp"
                android:textColor="@color/text_color"
                android:text="@string/home_yingshi"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6.5dp"
                android:textColor="@color/text_color"
                android:text="@string/home_meishi"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6.5dp"
                android:textColor="@color/text_color"
                android:text="@string/home_qita"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_type_face"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:background="#eeeeee"
            android:text="热门表情"
            android:gravity="center"
            android:layout_height="50dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:background="#eeeeee"
            android:text="主题表情"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_height="50dp" />
        <TextView
            android:id="@+id/tv_joke"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:background="#eeeeee"
            android:text="笑话段子"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_height="50dp" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="5dp"
        android:background="#ececec"
        />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

</LinearLayout>
